--- a/index.html
+++ b/index.html
@@ -337,9 +337,9 @@
                     </div>
 
                     <div class="bank-stack-container">
-                        <span class="bank-layer-bottom">🏦</span>
+                        <span class="bank-layer-bottom">🫙</span>
                         <span class="bank-layer-fire">🔥</span>
-                        <span class="bank-layer-top">🏦</span>
+                        <span class="bank-layer-top">🫙</span>
                     </div>
 
                     <div class="dool-card rounded-[2.5rem] p-8 text-center relative overflow-hidden">
