--- a/index.html
+++ b/index.html
@@ -322,14 +322,10 @@
                     </div>
 
                     <div class="grid grid-cols-2 gap-3">
-                        <button onclick="openModal('deposit')" class="h-20 glass-panel rounded-[2rem] flex items-center justify-center hover:bg-white/10 transition-colors border border-white/10 active:scale-95">
-                            <img src="https://emojigraph.org/media/google/downwards-button_1f53d.png" class="w-10 h-10 object-contain">
-                        </button>
-                        
-                        <button onclick="openModal('withdraw')" class="h-20 glass-panel rounded-[2rem] flex items-center justify-center hover:bg-white/10 transition-colors border border-white/10 active:scale-95">
-                            <img src="https://emojigraph.org/media/google/upwards-button_1f53c.png" class="w-10 h-10 object-contain">
-                        </button>
-                    </div>
+                        <div class="dool-card p-5 rounded-[2rem] flex flex-col items-center justify-center gap-1 aspect-square">
+                            <div class="w-10 h-10 rounded-full bg-white/5 flex items-center justify-center mb-2 text-neutral-400">
+                                <svg width="20" height="20" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M23 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13a4 4 0 0 1 0 7.75"/></svg>
+                            </div>
                             <p id="ref-count" class="text-2xl font-black">0</p>
                             <p class="text-[9px] font-bold text-neutral-600 uppercase tracking-wider">Друзей</p>
                         </div>
