--- a/index.html
+++ b/index.html
@@ -372,10 +372,10 @@
 
                     <div class="grid grid-cols-2 gap-3">
                         <button onclick="openModal('deposit')" class="h-20 glass-panel rounded-[2rem] flex flex-col items-center justify-center gap-1 hover:bg-white/10 transition-colors border border-white/10">
-                            <span class="text-lg">📥</span>
+                            <span class="text-lg">⏷</span>
                         </button>
                         <button onclick="openModal('withdraw')" class="h-20 glass-panel rounded-[2rem] flex flex-col items-center justify-center gap-1 hover:bg-white/10 transition-colors border border-white/10">
-                            <span class="text-lg">📤</span>
+                            <span class="text-lg">⏶</span>
                         </button>
                     </div>
                 </div>
