--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                                     </button>
                                     <button onclick="copyRef()" class="w-10 h-10 flex items-center justify-center bg-white text-black rounded-xl hover:scale-105 transition-transform cursor-pointer">
                                         <!-- ICON: Copy (Black - because button is white) -->
-                                        <img src="https://img.icons8.com/?size=100&id=uMQlJNpNjHdh&format=png&color=000000" class="w-4 h-4" alt="Copy">
+                                        <img src="https://img.icons8.com/?size=100&id=v6i0IST6rKnE&format=png&color=000000" class="w-4 h-4" alt="Copy">
                                     </button>
                                 </div>
                             </div>
