--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                                         <!-- ICON: Share (White) -->
                                         <img src="https://img.icons8.com/?size=100&id=PuZtTk7UXaiT&format=png&color=ffffff" class="w-4 h-4" alt="Share">
                                     </button>
-                                    <button onclick="copyRef()" class="w-10 h-10 flex items-center justify-center bg-white text-black rounded-xl hover:scale-105 transition-transform cursor-pointer">
+                                    <button onclick="copyRef()" class="w-10 h-10 flex items-center justify-center bg-orange-500 rounded-xl hover:bg-orange-600 transition-all cursor-pointer">
                                         <!-- ICON: Copy (Black - because button is white) -->
                                         <img src="https://img.icons8.com/?size=100&id=v6i0IST6rKnE&format=png&color=000000" class="w-4 h-4" alt="Copy">
                                     </button>
