--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                         <div class="dool-card p-5 rounded-[2rem] flex flex-col items-center justify-center gap-1 aspect-square">
                             <div class="w-10 h-10 rounded-full bg-white/5 flex items-center justify-center mb-2 text-neutral-400">
                                 <!-- ICON: Friend (Ref count) (White) -->
-                                <img src="https://img.icons8.com/?size=100&id=N9EwPosvU1Rm&format=png&color=ffffff" class="w-5 h-5 opacity-70" alt="Friends">
+                                <img src="https://img.icons8.com/?size=100&id=p8UFrp2VUgHR&format=png&color=000000" class="w-5 h-5 opacity-70" alt="Friends">
                             </div>
                             <p id="ref-count" class="text-2xl font-black">0</p>
                             <p class="text-[9px] font-bold text-neutral-600 uppercase tracking-wider">Друзей</p>
