--- a/index.html
+++ b/index.html
@@ -328,11 +328,11 @@
                     <div class="grid grid-cols-2 gap-3">
                         <button onclick="openModal('deposit')" class="h-20 glass-panel rounded-[2rem] flex flex-col items-center justify-center gap-1 hover:bg-white/10 transition-colors border border-white/10">
                             <!-- ICON: Deposit (Up/In) - Increased size w-12 h-12, White -->
-                            <img src="https://img.icons8.com/?size=100&id=TRtXTJHl1aqn&format=png&color=000000" class="w-12 h-12" alt="Deposit">
+                            <img src="https://img.icons8.com/?size=100&id=8P1z54VQlHYr&format=png&color=000000" class="w-12 h-12" alt="Deposit">
                         </button>
                         <button onclick="openModal('withdraw')" class="h-20 glass-panel rounded-[2rem] flex flex-col items-center justify-center gap-1 hover:bg-white/10 transition-colors border border-white/10">
                              <!-- ICON: Withdraw (Down/Out) - Increased size w-12 h-12, White -->
-                             <img src="https://img.icons8.com/?size=100&id=sjxiPXa5oxk4&format=png&color=000000" class="w-12 h-12" alt="Withdraw">
+                             <img src="https://img.icons8.com/?size=100&id=qRJUAI2xNkqe&format=png&color=000000" class="w-12 h-12" alt="Withdraw">
                         </button>
                     </div>
                 </div>
