--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/ShalfeyArt/admin/refs/heads/main/icon2.png">
+    <link rel="icon" href="https://raw.githubusercontent.com/ShalfeyArt/admin/refs/heads/main/icon.png" type="image/png" media="(prefers-color-scheme: light)">
+    <link rel="icon" href="https://raw.githubusercontent.com/ShalfeyArt/admin/refs/heads/main/icon2.png" type="image/png" media="(prefers-color-scheme: dark)">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>Doolcoin Wallet</title>
